# napari-mm

./: README.md  mkdocs.yml  myTest.py  myTest2.py  readme-dev.md  setup.cfg  setup.py  tox.ini
docs/: index.md
napari_mm/: _dock_widget.py  _function.py  _reader.py
napari_mm/_tests/: test_dock_widget.py  test_function.py  test_reader.py  test_writer.py
sandbox/: myMagicGui.py
