[metadata]
name = napari-mm
version = 0.0.1
author = Robert Cudmore
author_email = rhcudmore@ucdavis.edu
url = https://github.com/cudmore/napari-mm
license = GPL-3.0-only
description = Napari plugin to load and visualize 3D image time series created in Map Manager
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
project_urls =
    Bug Tracker = https://github.com/cudmore/napari-mm/issues
    Documentation = https://github.com/cudmore/napari-mm#README.md
    Source Code = https://github.com/cudmore/napari-mm
    User Support = https://github.com/cudmore/napari-mm/issues

[options]
packages = find:
python_requires = >=3.7

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy


[options.entry_points] 
napari.plugin = 
    napari-mm = napari_mm
